Add frontend components and fix search/UI for Vercel deployment