@@ -2,43 +2,63 @@ package com.example.jobportal.service;
 
 import com.example.jobportal.model.User;
 import com.example.jobportal.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.Optional;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
 
+    private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
+
     @Autowired
-    private UserRepository userRepository;
+    public UserDetailsServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder) {
+        this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
+    }
+
+    // No longer need a print method as users are in DB
+
+    public void registerUser(User user) {
+        if (userRepository.existsByEmail(user.getEmail())) {
+            throw new RuntimeException("User with email " + user.getEmail() + " already exists.");
+        }
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        user.setRole(user.getRole() != null ? user.getRole() : "USER"); // Default role
+        // Ensure firstName and lastName are set before saving
+        userRepository.save(user);
+        System.out.println("User registered in database: " + user.getEmail());
+    }
 
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         System.out.println("=== LOADING USER BY EMAIL ===");
         System.out.println("Email: " + email);
-        
+
         User user = userRepository.findByEmail(email)
-            .orElseThrow(() -> {
-                System.out.println("User not found with email: " + email);
-                return new UsernameNotFoundException("User not found with email: " + email);
-            });
+                .orElseThrow(() -> {
+                    System.out.println("User not found with email: " + email);
+                    return new UsernameNotFoundException("User not found with email: " + email);
+                });
 
         System.out.println("User found: " + user.getEmail());
         System.out.println("User role: " + user.getRole());
         System.out.println("Password encoded: " + (user.getPassword() != null && !user.getPassword().isEmpty()));
 
-        String role = user.getRole() != null ? user.getRole() : "USER";
-        
-        UserDetails userDetails = new org.springframework.security.core.userdetails.User(
-            user.getEmail(),
-            user.getPassword(),
-            List.of(new SimpleGrantedAuthority("ROLE_" + role))
-        );
-        
-        System.out.println("UserDetails created successfully");
-        return userDetails;
+        return new org.springframework.security.core.userdetails.User(
+                user.getEmail(),
+                user.getPassword(),
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole())));
+    }
+
+    // New method to find a User by email, returning an Optional<User>
+    public Optional<User> findByEmail(String email) {
+        return userRepository.findByEmail(email);
     }
 }
